--- a/faz_e_conta/data_hub/templates/links.html
+++ b/faz_e_conta/data_hub/templates/links.html
@@ -55,6 +55,26 @@
         <td><center><a href="{% url 'insert_funcionario_view' %}" style="display: inline-block; margin-top: 10px; padding: 10px 15px;width: 75%; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">Inserir Funcionario</a></center></td>
         <td><center><a href="{% url 'funcionario_view' funcionario_id=1 %}" style="display: inline-block; margin-top: 10px; padding: 10px 15px;width: 75%; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">Ver Funcionario com id 1</a></center></td>
     </tr>
+    <tr>
+        <td><center><a href="{% url 'insert_comparticipacao_mensal_ss_view' %}" style="display: inline-block; margin-top: 10px; padding: 10px 15px;width: 75%; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">Inserir Comparticipacao Mensal Ss</a></center></td>
+        <td><center><a href="{% url 'comparticipacao_mensal_ss_view' comparticipacao_mensal_ss_id=1 %}" style="display: inline-block; margin-top: 10px; padding: 10px 15px;width: 75%; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">Ver Comparticipacao Mensal Ss com id 1</a></center></td>
+    </tr>
+    <tr>
+        <td><center><a href="{% url 'insert_vacina_view' %}" style="display: inline-block; margin-top: 10px; padding: 10px 15px;width: 75%; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">Inserir Vacina</a></center></td>
+        <td><center><a href="{% url 'vacina_view' vacina_id=1 %}" style="display: inline-block; margin-top: 10px; padding: 10px 15px;width: 75%; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">Ver Vacina com id 1</a></center></td>
+    </tr>
+    <tr>
+        <td><center><a href="{% url 'insert_dose_view' %}" style="display: inline-block; margin-top: 10px; padding: 10px 15px;width: 75%; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">Inserir Dose</a></center></td>
+        <td><center><a href="{% url 'dose_view' dose_id=1 %}" style="display: inline-block; margin-top: 10px; padding: 10px 15px;width: 75%; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">Ver Dose com id 1</a></center></td>
+    </tr>
+    <tr>
+        <td><center><a href="{% url 'insert_divida_view' %}" style="display: inline-block; margin-top: 10px; padding: 10px 15px;width: 75%; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">Inserir Divida</a></center></td>
+        <td><center><a href="{% url 'divida_view' divida_id=1 %}" style="display: inline-block; margin-top: 10px; padding: 10px 15px;width: 75%; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">Ver Divida com id 1</a></center></td>
+    </tr>
+    <tr>
+        <td><center><a href="{% url 'insert_acordo_view' %}" style="display: inline-block; margin-top: 10px; padding: 10px 15px;width: 75%; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">Inserir Acordo</a></center></td>
+        <td><center><a href="{% url 'acordo_view' acordo_id=1 %}" style="display: inline-block; margin-top: 10px; padding: 10px 15px;width: 75%; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">Ver Acordo com id 1</a></center></td>
+    </tr>
 </table>
 {%block links%}
 {%endblock%}
@@ -114,5 +134,25 @@
     <tr>
         <td><center><a href="{% url 'insert_funcionario_view' %}" style="display: inline-block; margin-top: 10px; padding: 10px 15px;width: 75%; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">Inserir Funcionario</a></center></td>
         <td><center><a href="{% url 'funcionario_view' funcionario_id=1 %}" style="display: inline-block; margin-top: 10px; padding: 10px 15px;width: 75%; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">Ver Funcionario com id 1</a></center></td>
+    </tr>
+    <tr>
+        <td><center><a href="{% url 'insert_comparticipacao_mensal_ss_view' %}" style="display: inline-block; margin-top: 10px; padding: 10px 15px;width: 75%; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">Inserir Comparticipacao Mensal Ss</a></center></td>
+        <td><center><a href="{% url 'comparticipacao_mensal_ss_view' comparticipacao_mensal_ss_id=1 %}" style="display: inline-block; margin-top: 10px; padding: 10px 15px;width: 75%; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">Ver Comparticipacao Mensal Ss com id 1</a></center></td>
+    </tr>
+    <tr>
+        <td><center><a href="{% url 'insert_vacina_view' %}" style="display: inline-block; margin-top: 10px; padding: 10px 15px;width: 75%; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">Inserir Vacina</a></center></td>
+        <td><center><a href="{% url 'vacina_view' vacina_id=1 %}" style="display: inline-block; margin-top: 10px; padding: 10px 15px;width: 75%; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">Ver Vacina com id 1</a></center></td>
+    </tr>
+    <tr>
+        <td><center><a href="{% url 'insert_dose_view' %}" style="display: inline-block; margin-top: 10px; padding: 10px 15px;width: 75%; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">Inserir Dose</a></center></td>
+        <td><center><a href="{% url 'dose_view' dose_id=1 %}" style="display: inline-block; margin-top: 10px; padding: 10px 15px;width: 75%; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">Ver Dose com id 1</a></center></td>
+    </tr>
+    <tr>
+        <td><center><a href="{% url 'insert_divida_view' %}" style="display: inline-block; margin-top: 10px; padding: 10px 15px;width: 75%; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">Inserir Divida</a></center></td>
+        <td><center><a href="{% url 'divida_view' divida_id=1 %}" style="display: inline-block; margin-top: 10px; padding: 10px 15px;width: 75%; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">Ver Divida com id 1</a></center></td>
+    </tr>
+    <tr>
+        <td><center><a href="{% url 'insert_acordo_view' %}" style="display: inline-block; margin-top: 10px; padding: 10px 15px;width: 75%; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">Inserir Acordo</a></center></td>
+        <td><center><a href="{% url 'acordo_view' acordo_id=1 %}" style="display: inline-block; margin-top: 10px; padding: 10px 15px;width: 75%; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">Ver Acordo com id 1</a></center></td>
     </tr>
 </table>
