--- a/faz_e_conta/data_hub/templates/index.html
+++ b/faz_e_conta/data_hub/templates/index.html
@@ -1,4 +1,5 @@
 {% extends 'navigation.html' %}
+
 {% load custom_filters %}
 
 {% block links %}
@@ -14,7 +15,7 @@
                 <td>
                   <div class="chart-container">
                     <a href="" onclick="openImagePopup(this)">
-                      <img src="data:image/png;base64,{{ grafico }}" class="img-fluid" style="width: 100%; height: auto; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); border: 1px solid #ccc; padding: 10px;" alt="Gráfico" title="Clique para ampliar" onclick="openImagePopup(this)">
+                      <img src="/media/{{ grafico }}" class="img-fluid" style="width: 100%; height: auto; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); border: 1px solid #ccc; padding: 10px;" alt="Gráfico" title="Clique para ampliar" onclick="openImagePopup(this)">
                     </a>
                     <script>
                       function openImagePopup(element) {
