Created the pages asked and also added back the aluno insert page

--- a/faz_e_conta/data_hub/templates/base.html
+++ b/faz_e_conta/data_hub/templates/base.html
@@ -13,7 +13,7 @@
         }
 
         .navbar {
-            background-color: #333;
+            background-color: #1660e9;
             overflow: hidden;
             display: flex;
             padding: 10px;
@@ -41,6 +41,9 @@
     <div class="navbar">
         <a href="{% url 'starter_page' %}">Home</a>
         <a href="{% url 'show_students' %}">Alunos</a>
+        <a href="{% url 'show_contactos' %}">Contactos</a>
+        <a href="{% url 'show_salas' %}">Salas</a>
+        <a href="{% url 'show_despesas' %}">Despesas</a>
         <a href="{% url 'show_aluno_financas' %}">Finanças</a>
         <a href="#">More Options</a>
     </div>
