--- a/faz_e_conta/data_hub/templates/navigation.html
+++ b/faz_e_conta/data_hub/templates/navigation.html
@@ -82,6 +82,18 @@
         .search:hover {
             background-color:rgb(212, 148, 244);
         }
+
+        button {
+            display: inline-block;
+            padding: 10px 20px;
+            margin: 0 10px;
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+            border-radius: 5px;
+            background-color: #0220ae;
+            transition: 0.3s;
+        }
     </style>
     {% block scripts %}
     {% endblock %}
