Adicionado testes e algumas correções

--- a/faz_e_conta/data_hub/templates/base.html
+++ b/faz_e_conta/data_hub/templates/base.html
@@ -27,7 +27,7 @@
         }
 
         .navbar a:hover {
-            background-color: #575757;
+            background-color: #0647b7;
         }
 
         .container {
