--- a/faz_e_conta/data_hub/templates/insert_funcionario.html
+++ b/faz_e_conta/data_hub/templates/insert_funcionario.html
@@ -1,4 +1,5 @@
 <html lang='pt'>
+
 <head>
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
@@ -59,7 +60,9 @@
             text-decoration: underline;
         }
 
-        input, select, textarea {
+        input,
+        select,
+        textarea {
             width: 90%;
             padding: 8px;
             margin: 8px 0;
@@ -73,13 +76,15 @@
         }
     </style>
 </head>
+
 <body>
     <h1>Inserir Funcionario</h1>
     <form method='post'>
         {% csrf_token %}
         {{ form.as_p }}
         <button type='submit'>Inserir</button>
-        <a href="{% url 'index' %}">Voltar</a>
+        <a href="{% url 'starter_page' %}">Voltar</a>
     </form>
 </body>
+
 </html>
