Correções Nas Páginas Salas e contactos

--- a/faz_e_conta/data_hub/templates/base.html
+++ b/faz_e_conta/data_hub/templates/base.html
@@ -45,7 +45,7 @@
         <a href="{% url 'show_salas' %}">Salas</a>
         <a href="{% url 'show_despesas' %}">Despesas</a>
         <a href="{% url 'show_aluno_financas' %}">Finanças</a>
-        <a href="#">More Options</a>
+        <a href="#">Mais Opções</a>
     </div>
 
     <div class="container">
