--- a/faz_e_conta/data_hub/templates/show_contactos.html
+++ b/faz_e_conta/data_hub/templates/show_contactos.html
@@ -45,7 +45,13 @@
             <tr style="background-color: #f2f2f2;">
                 {% for item in head %}
                 <th style="border: 1px solid #ddd; padding: 10px;">
-                    {{ item|replace:"responsavel_nome_completo, Nome Completo do Responsável"|replace:"_, " }}
+                    {% if item == "responsavel_nome_completo" %}
+                    Nome Completo do Responsável
+                    {% elif item == "responsaveleducativo__responsavel_educativo_id" %}
+                    Responsável Educativo Id
+                    {% else %}
+                    {{ item|replace:"_, " }}
+                    {% endif %}
                 </th>
                 {% endfor %}
                 <th style="border: 1px solid #ddd; padding: 10px;">Detalhes</th>
@@ -75,8 +81,6 @@
             {% endfor %}
         </tbody>
     </table>
-
-    <a href="{% url 'starter_page' %}">Voltar</a>
 </body>
 
 </html>
