--- a/faz_e_conta/data_hub/templates/show_contactos_details.html
+++ b/faz_e_conta/data_hub/templates/show_contactos_details.html
@@ -1,4 +1,5 @@
 {% load custom_filters %}
+{% load static %}
 <!DOCTYPE html>
 <html lang='en'>
 
@@ -6,6 +7,7 @@
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>Detalhes do Responsável Educativo</title>
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
 </head>
 
 <body>
