--- a/faz_e_conta/data_hub/templates/show_funcionario.html
+++ b/faz_e_conta/data_hub/templates/show_funcionario.html
@@ -1,29 +1,34 @@
 {% load custom_filters %}
+{% load static %}
 <!DOCTYPE html>
 <html lang='en'>
+
 <head>
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>Funcionario Information</title>
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
 </head>
+
 <body>
     <h1>{{ data_dict.nome_proprio }} {{ data_dict.apelido }}</h1>
     <table>
         {% for field in head %}
-            {% if field != id %}
-                <tr align='left'>
-                    <th>{{ field|replace:'_id_id, '|replace:'_, '}}</th>
-                    {% if data_dict|get_item:field == None %}
-                        <td>
-                            <hr style='border: none; border-top: 3px dashed black;'>
-                        </td>
-                    {% else %}
-                        <td>{{ data_dict|get_item:field }}</td>
-                    {% endif %}
-                </tr>
+        {% if field != id %}
+        <tr align='left'>
+            <th>{{ field|replace:'_id_id, '|replace:'_, '}}</th>
+            {% if data_dict|get_item:field == None %}
+            <td>
+                <hr style='border: none; border-top: 3px dashed black;'>
+            </td>
+            {% else %}
+            <td>{{ data_dict|get_item:field }}</td>
             {% endif %}
+        </tr>
+        {% endif %}
         {% endfor %}
     </table>
     <a href="{% url 'show_students' %}">Voltar</a>
 </body>
+
 </html>
