--- a/faz_e_conta/data_hub/templates/navigation.html
+++ b/faz_e_conta/data_hub/templates/navigation.html
@@ -107,6 +107,11 @@
         <a href="{% url 'show_responsaveis_educativos' %}">Responsável Educativo</a>
         <a href="{% url 'show_vacinas' %}">Vacinas</a>
         <a href="{% url 'reports' %}">Reports</a>
+        {% if user.is_authenticated %}
+            <a href="{% url 'logout' %}">Logout</a>
+        {% else %}
+            <a href="{% url 'login' %}">Login</a>
+        {% endif %}
     </div>
     <br>
     <!-- Área de conteúdo com scroll -->
